--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.0.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "suspend-react": "^0.1.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.1.0",
